+ Adds a "Remove all owned from wishlist" button
+ Adds option to display "package" info on all apps
+ Adds warning when browsing Steam in your non-account region
: Fixes a bug where items with "&" in their name weren't highlighting on market
: Fixed SteamDB links to work with new Valve code changes near "Share" and "Embed" buttons

v4.4
-----
+ Adds "X games with drops remaining" to badge page
+ Adds foil badge progress link to non-foil badge progress page
: Fixes a bug where foil badges were linking to non-foil market pages
: Better uPlay and GFWL DRM detection on app pages
+ Adds highlighting to more sales pages, midweek and weekend deals
+ Adds price per game to multi-pack purchase options

v4.3
-----
+ Adds option on badge page to hide games with no drops remaining
+ Adds game bundle purchase support to applicable app pages
: Fixed a bug where market transaction processing was happening on every market page
: Fixed a bug on the options page if language is Spanish
: Fixed a bug where HLTB info was displaying twice on apps with WSGF certification

v4.2
-----
: Fix bug in international currency formatting
+ Adds support for Steam Workshop icon on app page linking to search page
: Updated Italian, Russian, French, and Spanish translations
+ Adds HowLongToBeat information on the app page
+ Adds achievement stats to the "All games" list

v4.1
-----
+ Adds automatic language settings detection
+ Adds marketplace transaction summary to market homepage
: Fixes a bug where coupons were showing incorrect expiration dates
: Optimized some code for faster loading
+ Adds a "Remove from wishlist" button the app page of wishlisted items

v4.0.1
-----
+ Adds highlighting to sales pages
+ Updated Italian and Portuguese translations

v4.0
-----
+ Add "Total drops remaining" to Badges page
+ Added search, filtering, achievements, news, and links to Library page
: Moving to new price history API
: Updated multiple translations
+ Added "Library" link to SteamCommunity pages