@@ -8,6 +8,7 @@ v4.5
 + Adds warning when browsing Steam in your non-account region
 : Fixes a bug where items with "&" in their name weren't highlighting on market
 : Fixed SteamDB links to work with new Valve code changes near "Share" and "Embed" buttons
+: Fixes broken or "no image found" images on subscription pages and profile page
 
 v4.4
 -----
